  to a value not in a list of choices on popup close (Kolya Kosenko)
- Switching wxListCtrl to report mode from another one now uses full row
  highlight, just as if the control were created in report mode initially.
- Use correct index of the right-clicked column in wxListCtrl in the
  corresponding event even when the control is scrolled horizontally.

wxGTK:

- Return false from wxEventLoop::Dispatch() if gtk_main_quit() was called and
  so the loop should exit (Rodolfo Schulz de Lima).
- Implement wxListBox::EnsureVisible() (Andreas Kling)
- Fixed wxCURSOR_HAND to map to GDK_HAND2 and not GDK_HAND1, for consistency
  with other applications.
- Fix wxNotebook::GetPage{Text,Image}() when they were called from the page
  change event handler for the first added page (Mikkel S).

wxMac:

- Fixed cursor for wxBusyCursor and wxContextHelp.


2.8.7
-----

All:

- Fixed bug with default proxy destruction in wxURL (Axel Gembe).

All (GUI):

- wxGraphicsContext implementations now all have the pixel's center at (0.5,0.5),
  avoiding differences in anti-aliasing between platforms.
- wxChoicebook now vertically centres a left-aligned controller.
- Improved borders and size of rich text dialogs.
- Added an optimization to UI updates on idle, by only updating when the
  window is shown.
- Multiple centre panes in wxAUI can now be resized.
- Add support for reading alpha data from TIFF images.

wxMSW:

- Correct (harmless) warnings given for forward-declared DLL-exported classes
  by mingw32 4.2 (Tim Stahlhut).
- Fixed a bug whereby acclerators including Enter were not processed
  when a tree control was focused.
- Fixed AUI hint drawing bug on Vista.
- Fixed a bug with a spurious border appearing on wxStatusBar under Windows
  XP/Vista.

wxGTK:

- Added gtk.window.force-background-colour wxSystemOptions option to work around
  a background colour bug in the gtk-qt theme under KDE.
- wxSystemSettings::GetColour(wxSYS_COLOUR_WINDOW) now returns the background